# clop

./: .gitignore  Dockerfile  README.md  clop.py  index.html  justfile  pyproject.toml
.github/workflows/: docker.yml
css/: style.css
data_utils/: fractal.py  model_from_scratch.py
examples/: dna_encoder.onnx  dummy_dna_vocab.json  dummy_embeddings.json  dummy_text_vocab.json
examples/notebooks/: 00_download_dataset.ipynb  01_process_dataset.ipynb  01b_reformat_data_openclip.ipynb  training_eval.ipynb
js/: app.js  classification.js  config.js  dummy_data.js  parsers.js  ui.js  ui0.js  utils.js  visualizations.js
src/clop/: baseline.py  clop.py
src/clop/data_utils/: fractal.py  model.py  model_from_scratch.py  preprocessing.py
tools/just/: nix.just
tools/nix/: devenv.nix  flake.nix
